# RealSixEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Animation/: AnimationClip.hpp  AnimationTexture.cpp  AnimationTexture.h  AnimationTexture.hpp  Blending.cpp  Blending.h  Blending.hpp  Clip.h  Clip.hpp  CrossFadeController.cpp  CrossFadeController.h  CrossFadeController.hpp  CrossFadeTarget.h  CrossFadeTarget.hpp  FastTrack.h  FastTrack.hpp  Frame.h  Interpolation.h  Interpolation.hpp  Pose.cpp  Pose.h  Pose.hpp  Skeleton.cpp  Skeleton.h  Skeleton.hpp  Track.h  Track.hpp  TransformTrack.h  TransformTrack.hpp
Animation/IK/: CCDIK.cpp  CCDIK.h  CCDIK.hpp  FABRIK.cpp  FABRIK.h  FABRIK.hpp
Config/: Config.cpp  Config.h  Version.h.in
Core/: App.cpp  App.h  App.hpp  Common.h  Common.hpp  Config.cpp  Config.hpp  IO.cpp  IO.h  Logger.hpp  Marco.h  Marco.hpp  NonCopyable.h  Singleton.h  String.cpp  String.hpp  Version.hpp.in
Editor/: EditorApp.cpp  EditorApp.h  EditorApp.hpp  EditorMainEntry.cc
Editor/EditorUIPass/: EditorUIPass.cpp  EditorUIPass.hpp  EditorUIPassImguiVulkanImpl.cpp  EditorUIPassImguiVulkanImpl.hpp  EditorUIPassVulkanImpl.cpp  EditorUIPassVulkanImpl.h  EditorUIPassVulkanImpl.hpp
Gfx/: IGfxBuffer.cpp  IGfxBuffer.h  IGfxBuffer.hpp  IGfxCommandBuffer.cpp  IGfxCommandBuffer.h  IGfxCommandBuffer.hpp  IGfxCommon.cpp  IGfxCommon.h  IGfxCommon.hpp  IGfxDevice.cpp  IGfxDevice.h  IGfxDevice.hpp  IGfxPipeline.cpp  IGfxPipeline.h  IGfxPipeline.hpp  IGfxShader.cpp  IGfxShader.h  IGfxShader.hpp  IGfxSwapChain.cpp  IGfxSwapChain.h  IGfxSwapChain.hpp  IGfxTexture.cpp  IGfxTexture.h  IGfxTexture.hpp
Gfx/VK/: GfxVulkanAllocator.cpp  GfxVulkanAllocator.hpp  GfxVulkanBuffer.cpp  GfxVulkanBuffer.h  GfxVulkanBuffer.hpp  GfxVulkanBufferCommon.h  GfxVulkanBufferUtils.h  GfxVulkanBufferUtils.hpp  GfxVulkanCommandBuffer.cpp  GfxVulkanCommandBuffer.h  GfxVulkanCommandBuffer.hpp  GfxVulkanCommon.cpp  GfxVulkanCommon.h  GfxVulkanDevice.cpp  GfxVulkanDevice.h  GfxVulkanDevice.hpp  GfxVulkanObject.cpp  GfxVulkanObject.h  GfxVulkanPipeline.cpp  GfxVulkanPipeline.h  GfxVulkanPipeline.hpp  GfxVulkanShader.cpp  GfxVulkanShader.h  GfxVulkanShader.hpp  GfxVulkanSwapChain.cpp  GfxVulkanSwapChain.h  GfxVulkanSwapChain.hpp  GfxVulkanSyncObject.cpp  GfxVulkanSyncObject.h  GfxVulkanSyncObject.hpp  GfxVulkanTexture.cpp  GfxVulkanTexture.h  GfxVulkanTexture.hpp  GfxVulkanUtils.cpp  GfxVulkanUtils.hpp
Logger/: Logger.h
Math/: Color.cpp  Color.hpp  DualQuaternion.h  DualQuaternion.hpp  Math.hpp  Matrix2.h  Matrix3.hpp  Matrix4.h  Matrix4.hpp  Quaternion.h  Quaternion.hpp  Random.cpp  Random.h  Random.hpp  Transform.h  Transform.hpp  Transform2.h  Transform3.h  Vector2.h  Vector3.hpp  Vector4.h
Platform/: InputSystem.cpp  InputSystem.h  InputSystem.hpp  MainEntry.hpp  PlatformInfo.cpp  PlatformInfo.h  PlatformInfo.hpp  Window.cpp  Window.h  Window.hpp
Platform/SDL3/: SDL3InputSystem.cpp  SDL3InputSystem.h  SDL3InputSystem.hpp  SDL3PlatformInfo.h  SDL3PlatformInfo.hpp  SDL3Window.cpp  SDL3Window.h  SDL3Window.hpp  main.cpp
Render/: Camera.cpp  Camera.h  Camera.hpp  Color.cpp  Color.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Resource.h
Render/FrameGraph/: FrameGraph.h  FrameGraph.hpp  FrameGraphRenderTask.h  FrameGraphRenderTask.hpp  FrameGraphRenderTaskBuilder.h  FrameGraphRenderTaskBuilder.hpp  FrameGraphResource.h  FrameGraphResource.hpp  RenderTask.h  RenderTaskBuilder.h  Resource.h
Resource/: FileSystem.cpp  FileSystem.h  FileSystem.hpp  FrameGraphResourceCreator.h  FrameGraphResourceCreator.hpp  GLTFLoader.cpp  GLTFLoader.h  GLTFLoader.hpp  IO.cpp  IO.h  IO.hpp  MeshResourceManager.cpp  MeshResourceManager.h  ResourceLoader.cpp  ResourceLoader.h  ResourceLoader.hpp
Script/: Allocator.cpp  Allocator.h  Allocator.hpp  Ast.cpp  Ast.h  Ast.hpp  AstOptimizePass.h  AstPass.h  AstPass.hpp  Chunk.cpp  Chunk.h  Chunk.hpp  Common.cpp  Common.h  Compiler.cpp  Compiler.h  Compiler.hpp  ConstantFoldPass.cpp  ConstantFoldPass.h  ConstantFoldPass.hpp  Context.cpp  Context.h  Context.hpp  Lexer.cpp  Lexer.h  Lexer.hpp  LibraryManager.cpp  LibraryManager.h  LibraryManager.hpp  Logger.h  Logger.hpp  Object.cpp  Object.h  Object.hpp  Parser.cpp  Parser.h  Parser.hpp  SyntaxCheckPass.cpp  SyntaxCheckPass.h  SyntaxCheckPass.hpp  (+18 more)
Test/: CMakeLists.txt
Test/FrameGraphTest/: CMakeLists.txt  FrameGraphTest.cpp
Test/RenderTest/: BasicMeshPass.cpp  BasicMeshPass.h  BasicMeshPass.hpp  CMakeLists.txt  MandelbrotSetPass.cpp  MandelbrotSetPass.h  MandelbrotSetPass.hpp  MeshDrawPass.cpp  MeshDrawPass.h  RenderTestMainEntry.cc  TestApp.cpp  TestApp.h  TestApp.hpp
Test/RenderTest/assets/shaders/: BasicMeshPass.frag.slang  BasicMeshPass.vert.slang  MandelbrotSetDrawPass.frag.slang  ScreenSpaceQuad.vert.slang  VertexDef.common.slang
Test/RenderTest/shaders/: BasicMeshPass.frag.slang  BasicMeshPass.vert.slang  MandelbrotSet.comp.slang  MandelbrotSetDrawPass.frag.slang  ScreenSpaceQuad.vert.slang  VertexDef.common.slang  meshDrawPass.frag.slang  meshDrawPass.vert.slang  meshdrawPass.common.slang
Test/ScriptTest/: CMakeLists.txt  RealSixScript.cc
Test/ScriptTest/examples/: block-expr.r6  class.r6  destructuring-assignment.r6  enum-in-class.r6  static-variable.r6
